fix z-index iqb-berlin/verona-modules-nemo/#329

--- a/projects/player/src/app/components/click-layer/click-layer.component.scss
+++ b/projects/player/src/app/components/click-layer/click-layer.component.scss
@@ -6,6 +6,6 @@
   height: 100%;
   background-color: transparent;
   cursor: pointer;
-  z-index: 99;
+  z-index: 151;
   -webkit-tap-highlight-color: transparent;
 }
